[package]
name = "cranefack-cli"
version = "0.1.0"
authors = ["Volker Ströbel <volkerstroebel@mysurdity.de>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Commandline utility for the cranefack brainfuck compiler"
categories = ["compilers"]
keywords = ["brainfuck", "parser", "compiler", "jit", "cranelift"]
readme = "../README.md"
repository = "https://github.com/vstroebel/cranefack"

[[bin]]
name = "cranefack"
path = "src/main.rs"
doc = false

[dependencies]
cranefack = { path = "../cranefack", version = "0.1" }
clap = "2.33"
codespan-reporting = "0.11"
