[package]
name = "cranefack-cli"
version = "0.4.2"
authors = ["Volker Ströbel <volkerstroebel@mysurdity.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Commandline utility for the cranefack brainfuck compiler"
categories = ["compilers"]
keywords = ["brainfuck", "parser", "compiler", "jit", "cranelift"]
readme = "../README.md"
repository = "https://github.com/vstroebel/cranefack"

[[bin]]
name = "cranefack"
path = "src/main.rs"
doc = false

[dependencies]
cranefack = { path = "../cranefack", version = "0.4.1" }
clap = { version = "4.1.8", features = ['cargo'] }
codespan-reporting = "0.11"
