[package]
name = "cranefack"
version = "0.2.0"
authors = ["Volker Ströbel <volkerstroebel@mysurdity.de>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "An optimizing brainfuck compiler"
categories = ["compilers"]
keywords = ["brainfuck", "parser", "compiler", "jit", "cranelift"]
readme = "../README.md"
repository = "https://github.com/vstroebel/cranefack"

[dependencies]
codespan-reporting = "0.11"
cranelift = "0.75.0"
cranelift-module = "0.75.0"
cranelift-codegen = "0.75.0"
cranelift-jit = "0.75.0"
cranelift-native = "0.75.0"
